# adb-ext

./: .gitignore  Cargo.toml  README.md
src/: core.rs  main.rs  tests.rs
src/core/: adb_command.rs  adb_device.rs  anim_scale.rs  apks.rs  completer.rs  config.rs  const.rs  destination.rs  device.rs  ext.rs  fix.rs  layout_bounds.rs  lss.rs  make_screenshot.rs  orientation.rs  pain.rs  pointer.rs  preparing.rs  pull_media.rs  screencap.rs  screenrecord.rs  sdk.rs  selector.rs  start_mode.rs  strings.rs  system.rs  taps.rs  uid.rs  updater.rs  updater_unix.rs  updater_win.rs  usb_device.rs  usb_resolver.rs  util.rs
src/core/fix/: permission_resolver.rs  usb_device.rs
stuff/: install.bat  install.sh
