[package]
name = "adb-ext"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["user"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
chrono = "0.4.31"
itertools = "0.12.0"

[target.x86_64-unknown-linux-gnu.dependencies]
libusb = "0.3.0"
