[package]
name = "adb-ext"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["user", "signal"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
chrono = "0.4.31"
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_yaml = "0.9.27"
regex = "1.10.2"

[target.x86_64-unknown-linux-gnu.dependencies]
libusb = "0.3.0"
